--- a/src/app/estadistica-libros/estadistica-libros.component.html
+++ b/src/app/estadistica-libros/estadistica-libros.component.html
@@ -47,3 +47,7 @@ Histograma de la longitud de las sinopsis.
       </div>
     </div>
   </div>
+
+  <div>
+    <canvas width="800" height="800" id="mapa-palabras"></canvas>
+  </div>
