Avance en el front

--- a/src/app/estadistica-juegos-emulador/estadistica-juegos-emulador.component.html
+++ b/src/app/estadistica-juegos-emulador/estadistica-juegos-emulador.component.html
@@ -1,46 +1,8 @@
 <p>estadistica-juegos-emulador works!</p>
 
-
-
-Gráfico de barras de la cantidad de emuladores por plataforma.
-Nube de palabras de géneros de juegos soportados.
-Gráfico circular de la distribución de emuladores por género.
-Análisis de sentimientos de las descripciones de los emuladores.
-Gráfico de áreas mostrando la evolución de lanzamientos de emuladores.
-Visualización de la proporción de emuladores que posees frente a los totales.
-
-
-
-
-<div class="card-deck">
-    <div class="card">
-      <img class="card-img-top" src="..." alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top" src="..." alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top" src="..." alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-  </div>
+  
+<div>
+  <canvas width="800" height="600" id="mapa-palabras"></canvas>
+</div>
+   
+  
