--- a/src/app/estadistica-manga/estadistica-manga.component.html
+++ b/src/app/estadistica-manga/estadistica-manga.component.html
@@ -9,3 +9,14 @@
   
   
 </div>
+
+Numero de Mangas por Autor
+
+
+
+
+
+Nube de palabras
+<div>
+  <canvas width="800" height="800" id="mapa-palabras"></canvas>
+</div>
