--- a/src/app/estadistica-juegos/estadistica-juegos.component.html
+++ b/src/app/estadistica-juegos/estadistica-juegos.component.html
@@ -1,45 +1,8 @@
-<p>estadistica-juegos works!</p>
+<p>estadistica-juegos</p>
 
-
-Gráfico de barras de la cantidad de juegos por plataforma.
-Nube de palabras con los géneros más comunes.
-Gráfico de dispersión de juegos por género y plataforma.
-Análisis de sentimientos de las descripciones de los juegos.
-Histograma de la longitud de las descripciones de juegos.
-Gráfico de líneas de tendencias de lanzamientos de juegos por año
-
-
-
-
-<div class="card-deck">
-    <div class="card">
-      <img class="card-img-top" src="..." alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top" src="..." alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top" src="..." alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-  </div>
+  
+<div>
+  <canvas width="800" height="600" id="mapa-palabras"></canvas>
+</div>
+   
+  
