--- a/src/app/estadistica-juegos/estadistica-juegos.component.html
+++ b/src/app/estadistica-juegos/estadistica-juegos.component.html
@@ -1,6 +1,16 @@
 <p>estadistica-juegos</p>
 
-  
+<div class="card-group">
+  <div class="card">
+    <canvas id="primera-grafica"></canvas>
+    <div class="card-body">
+      <h5 class="card-title">Comics de cada Autor</h5>
+      <p class="card-text">Cantidad de Comics de cada Autor</p>
+    </div>
+  </div>
+</div>
+
+
 <div>
   <canvas width="800" height="600" id="mapa-palabras"></canvas>
 </div>
