--- a/src/app/estadistica-libros/estadistica-libros.component.html
+++ b/src/app/estadistica-libros/estadistica-libros.component.html
@@ -2,51 +2,16 @@
 
 
 
-
-Nube de palabras de los autores más mencionados.
-Gráfico de barras de la cantidad de libros por autor.
-Análisis de frecuencia de palabras en sinopsis.
-Gráfico circular de la diversidad de géneros literarios.
-Visualización de red de autores y sus obras más populares.
-Histograma de la longitud de las sinopsis.
-
-
-
-
-
-
-<div class="card-deck">
-    <div class="card">
-      <img class="card-img-top" src="..." alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top" src="..." alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top" src="..." alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
+<div class="card-group">
+  <div class="card">
+    <canvas id="primera-grafica"></canvas>
+    <div class="card-body">
+      <h5 class="card-title">Comics de cada Autor</h5>
+      <p class="card-text">Cantidad de Comics de cada Autor</p>
     </div>
   </div>
+</div>
+
 
   <div>
     <canvas width="800" height="800" id="mapa-palabras"></canvas>
